Test runtime/SharedArchiveFile/LimitSharedSizes.java fails in jdk 9 fcs new platforms/compiler

XMLWordPrintable

    • b42
    • generic
    • os_x
    • Verified

        Testsuite name: hotspot
        Test name(s): runtime/SharedArchiveFile/LimitSharedSizes.java
        Product(s) tested: jdk 9 fcs new compiler
        OS/architecture: MacOSX(10.9)

        Reproducible: Always
        Reproducible on machine: stt-mac-01.ru.oracle.com
        Also reproducible on machine: stt-mac-05.ru.oracle.com, stt-mac-08.ru.oracle.com
        Is it a test bug or a product bug : Product Bug
        Is it a Regression: Yes
        Regression introduced in release/build: JDK 9 fcs new compiler

        Is it a platform specific issue: Yes

        ----------System.err:(36/1864)----------
         stdout: [Allocated shared space: 25288704 bytes at 0x0000000800000000
        Loading classes to share ...
        Loading classes to share: done.
        Rewriting and linking classes ...
        Rewriting and linking classes: done
        Number of classes 118
            instance classes = 104
            obj array classes = 6
            type array classes = 8
        Calculating fingerprints ... done.
        Removing unshareable information ... done.
        ro space: 502048 [ 34.4% of total] out of 4194304 bytes [12.0% used] at 0x0000000800000000
        rw space: 605808 [ 41.5% of total] out of 16777216 bytes [ 3.6% used] at 0x0000000800400000
        md space: 316912 [ 21.7% of total] out of 4194304 bytes [ 7.6% used] at 0x0000000801400000
        mc space: 34053 [ 2.3% of total] out of 122880 bytes [27.7% used] at 0x0000000801800000
        total : 1458821 [100.0% of total] out of 25288704 bytes [ 5.8% used]
        ];
         stderr: []
         exitValue = 0

        java.lang.RuntimeException: 'The shared read only space is not large enough' missing from stdout/stderr

        at com.oracle.java.testlibrary.OutputAnalyzer.shouldContain(OutputAnalyzer.java:80)
        at LimitSharedSizes.main(LimitSharedSizes.java:82)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.lang.reflect.Method.invoke(Method.java:498)
        at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
        at java.lang.Thread.run(Thread.java:745)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: 'The shared read only space is not large enough' missing from stdout/stderr

        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'The shared read only space is not large enough' missing from stdout/stderr

        Test run log location:
        Steps to reproduce:
        1. login into stt-mac-01.ru.oracle.com
        2. go to /export/home/gtee/9b90_hotspot
        3. add test case in 'failedcase' file
        4. run : python filereader.py

        workspace : http://jre.us.oracle.com/java/re/scanas412/java_re2/archive/jdk9-build-upgrades/b90_2014-09-10-1604_32/ws/hotspot/test/

        jdk : http://jre.us.oracle.com/java/re/scanas412/java_re2/archive/jdk9-build-upgrades/b90_2014-09-10-1604_32/bundles/macosx-amd64/

              Assignee:
              Calvin Cheung (Inactive)
              Reporter:
              Shobhit Gupta
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: