8060721: Test runtime/SharedArchiveFile/LimitSharedSizes.java fails in jdk 9 fcs new platforms/compiler

Replaced strcat() with jio_snprintf()

Reviewed-by: dholmes, iklam, dlong, minqi